# tempus-core

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README  README.md  _Deparsed_XSubs.pm  autogen.sh  cmake-init.txt  configure.sh  cppcheck.supp  packlist.txt  sanitize-blacklist.txt
SVRRoot/OnlineSVR/: CMakeLists.txt
SVRRoot/OnlineSVR/include/: align_features.cuh  calc_kernel_inversions.hpp  calc_kernel_quantiles.hpp  clion_cuda.h  cuda_path.cuh  cuda_path.hpp  cuqrsolve.cuh  cuqrsolve.hpp  fast_cvmd.hpp  firefly.cuh  firefly.hpp  kernel_base.cuh  kernel_base.hpp  kernel_base.tpp  kernel_deep_path.hpp  kernel_dtw.hpp  kernel_factory.hpp  kernel_factory.tcc  kernel_factory.tpp  kernel_gbm.hpp  kernel_global_alignment.hpp  kernel_linear.hpp  kernel_path.hpp  kernel_polynomial.hpp  kernel_radial_basis.hpp  kernel_radial_basis_exponential.hpp  kernel_radial_basis_gaussian.hpp  kernel_sigmoidal.hpp  kernel_tft.hpp  mat_solve_gpu.hpp  matrix_solver.hpp  model_features.hpp  modwt_transform.hpp  new_path_kernel.cuh  nm.hpp  oemd_coefficient_search.hpp  oemd_coefficients.hpp  oemd_coefficients_search.hpp  online_emd.hpp  online_emd_impl.cuh  (+19 more)
SVRRoot/OnlineSVR/src/: File.cpp  align_features.cu  calc_kernel_inversions.cpp  calc_kernel_quantiles.cpp  cuda_path.cu  cuda_path.hpp  cuqrsolve.cu  fast_cvmd.cpp  fast_cvmd_ei.cpp  firefly.cpp  firefly.cu  js_kernel.cu  kernel_base.cpp  kernel_base.cu  kernel_deep_path.cpp  kernel_gbm.cpp  kernel_global_alignment.cpp  kernel_global_alignment.cpp.txt  kernel_path.cpp  kernel_path.cu  kernel_radial_basis.cu  kernel_tft.cpp  manifolds.cpp  mat_solve_gpu.cpp  mat_solve_gpu.cpp.txt  matmul.cu  matmul.cuh  matrix_solver.cpp  modwt_transform.cpp  new_path_kernel.cu  nm.cpp  oemd_coefficient_search.cpp  oemd_coefficient_search_impl.cu  oemd_coefficients.cpp  oemd_coefficients_search.cpp  oemd_coefficients_search_impl.cu  oemd_scoring.cu  oemd_scoring.cu.wip  online_emd.cpp  online_emd_impl.cu  (+25 more)
SVRRoot/OnlineSVR/test/: OnlineSVRTests.cpp  custom_lstms.py  cvmd_tests.cpp  kernel_GA_test.cpp  kernel_basic_integration_test.cpp  kernel_basic_integration_test.hpp  kernel_basic_integration_test_smo.cpp  kernel_basic_integration_test_smo.hpp  kernel_path_test.cpp  lstm.py  mimo_tests.cpp  modwt_tests.cpp  online_emd_tests.cpp  stft_tests.cpp  test_fraud_henry_dima.cpp  test_harness.cpp  test_harness.hpp  test_linear.py  test_oemd_transform.hpp  train_files.cpp  train_predict_test_lstm.cpp  train_predict_test_lstm_tf.cpp  train_predict_test_pt.py  train_predict_test_pt_2.py  train_predict_test_rbf1.cpp  train_predict_test_rbf2.cpp  train_predict_test_xgboost.py  train_predict_tests_manifold.cpp  train_predict_tests_path.cpp  train_predict_tests_path2.cpp  train_predict_tests_path3.cpp  wavelib_tests.cpp
SVRRoot/SVRBenchmarks/: CMakeLists.txt  configure_gbenchmark.sh
SVRRoot/SVRBenchmarks/gbenchmark/: CMakeLists.txt
SVRRoot/SVRBenchmarks/src/: OnlineSVR_benchmarks.cpp  SVRModel_benchmarks.cpp
SVRRoot/SVRBusiness/: CMakeLists.txt
SVRRoot/SVRBusiness-tests/: CMakeLists.txt
SVRRoot/SVRBusiness-tests/test/: AutotuneServiceTests.cpp  DQScalingFactorService_tests.cpp  DatasetServiceTests.cpp  DeconQueueDeconstructionTests.cpp  DeconQueuePerformance.cpp  DeconQueueServiceTests.cpp  EnsembleServiceTests.cpp  IQScalingFactorServiceTests.cpp  InputQueuePerformance.cpp  InputQueueServiceTests.cpp  ModelServiceTests.cpp  RequestServiceTests.cpp  SVRParametersServiceTests.cpp  UserServicesTests.cpp  main.cpp
SVRRoot/SVRBusiness/include/: AuthenticationProvider.hpp  AutotuneTaskService.hpp  DQScalingFactorService.hpp  DQScalingFactorService.tpp  DatasetService.hpp  DeconQueueService.hpp  DecrementTaskService.hpp  EnsembleService.hpp  IQScalingFactorService.hpp  InputQueueService.hpp  LocalAuthenticationProvider.hpp  ModelService.hpp  PredictionTaskService.hpp  RequestService.hpp  SVRParametersService.hpp  ScalingFactorService.hpp  ScalingFactorService.tpp  ScalingFactorsTaskService.hpp  UserService.hpp  WScalingFactorService.hpp  appcontext.hpp  business.hpp  calc_cache.hpp  calc_cache.tpp  dq_scaling_factors_service_impl.cuh  main-config.hpp  recombine_parameters.cuh
SVRRoot/SVRBusiness/src/: AutotuneTaskService.cpp  DQScalingFactorService.cpp  DatasetService.cpp  DatasetServiceTuning.cpp  DatasetServiceTuning.cpp.backup  DeconQueueService.cpp  DecrementTaskService.cpp  EnsembleService.cpp  IQScalingFactorService.cpp  InputQueueService.cpp  LocalAuthenticationProvider.cpp  ModelService.cpp  ModelServiceTune.cpp  PredictionTaskService.cpp  RequestService.cpp  SVRParametersService.cpp  ScalingFactorService.cpp  ScalingFactorsTaskService.cpp  UserService.cpp  WScalingFactorService.cpp  appcontext.cpp  calc_cache.cpp  dq_scaling_factors_service_impl.cu  main.cpp  recombine_parameters.cu  scaling_factor_service_impl.cu
SVRRoot/SVRCommon/: CMakeLists.txt
SVRRoot/SVRCommon/include/: common.hpp
SVRRoot/SVRCommon/src/: CompressionUtils.cpp  CpuThread.cpp  CpuThread.hpp  MemoryManager.cpp  PerformanceUtils.cpp  PropertiesFileReader.cpp  ResourceMeasure.cpp  TimeUtils.cpp  barrier.cpp  compatibility.cpp  constants.cpp  cuda_util.cu  gpu_errors.cpp  gpu_handler.cpp  logging.cpp  math_utils.cpp  opencl_errors.cpp  opencl_functions.cpp  opencl_helpers.cpp  parallelism.cpp  rtp_task.cpp  rtp_thread.cpp  rtp_thread_pool.cpp  semaphore.cpp  spin_lock.cpp  string_utils.cpp  thread_pool.cpp  time_utils.cpp
SVRRoot/SVRCommon/test/: TestSuite.cpp  TestSuite.hpp  logging_test.cpp  rtp_tests.cpp  thread_pool_tests.cpp  throttler_tests.cpp
SVRRoot/SVRDaemon/: CMakeLists.txt
SVRRoot/SVRDaemon-blackbox-tests/: CMakeLists.txt
SVRRoot/SVRDaemon-blackbox-tests/test/: BasicBlackboxTest.cpp  BatchOnlineTrainingTests.cpp  SVRDaemonBlackboxTest_main.cpp
SVRRoot/SVRDaemon/include/: DaemonFacade.hpp  daemon-config.hpp  streaming_messages_protocol.hpp
SVRRoot/SVRDaemon/src/: DaemonFacade.cpp  (+2 more)
SVRRoot/SVRFix/: CMakeLists.txt
SVRRoot/SVRModel/: CMakeLists.txt
SVRRoot/SVRPersist/: CMakeLists.txt
SVRRoot/SVRWeb/: CMakeLists.txt
SVRRoot/zTools/: CMakeLists.txt
(+863 files in other folders)
